# Vanadium

./: args.gn  generate_release.sh
patches/: 0053-rename-Sync-and-Google-services-Services.patch  0054-remove-data-reduction-preference.patch  0055-remove-translate-offer-preference.patch  0056-remove-sync-preferences.patch  0057-remove-navigation-error-preference.patch  0058-remove-password-leak-detection-preference.patch  0059-remove-safe-browsing-reporting-preference.patch  0060-remove-usage-and-crash-reports-preference.patch  0061-remove-url-keyed-anonymized-data-preference.patch  0062-remove-redundant-services-preference-category.patch  0063-remove-more-sync-preferences.patch  0064-set-default-search-engine-to-DuckDuckGo.patch  0065-disable-trivial-subdomain-hiding.patch  0066-disable-learn-more-link-in-incognito-new-tab.patch  0067-add-back-trichrome_chrome_64_32_bundle-target.patch  0068-disable-Omaha-update-check-support.patch  0069-disable-GaiaAuthFetcher-code-due-to-upstream-bug.patch  0070-disable-checkout_nacl.patch  0071-ask-permission-to-play-protected-media-by-default.patch  0072-disable-autofill-server-communication-by-default.patch  0073-disable-WebView-variations-support.patch  0074-enable-split-cache-by-default.patch
