target_os = "android"
# change to x64 for x86_64 targets
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "84.0.4147.106"
android_default_version_code = "414710600"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 1
fieldtrial_testing_like_official_build = true

# enable patented codecs
ffmpeg_branding = "Chrome"
proprietary_codecs = true

is_cfi = true

enable_gvr_services = false
enable_remoting = false

# set to false to build without the unused reporting support
#
# this breaks the build since 83.0.4103.60 - last tested with 84.0.4147.89
enable_reporting = true

trichrome_certdigest = "980e509dd29562de939c681460cc02aca7e120c164ef1d7bdc3c22c7af839021"

# migrating browser package name is desired but is difficult without losing user data
chrome_public_manifest_package = "org.chromium.chrome"
#chrome_public_manifest_package = "org.grapheneos.vanadium"
system_webview_package_name = "org.grapheneos.vanadium.webview"
trichrome_library_package = "org.grapheneos.vanadium.trichromelibrary"
