target_os = "android"
# change to x64 for x86_64 targets
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "86.0.4240.107"
android_default_version_code = "424010700"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 1
fieldtrial_testing_like_official_build = true

# enable patented codecs
ffmpeg_branding = "Chrome"
proprietary_codecs = true

is_cfi = true

enable_gvr_services = false
enable_remoting = false

# set to false to build without the unused reporting support
#
# this breaks the build since 83.0.4103.60 - last tested with 84.0.4147.89
enable_reporting = true

trichrome_certdigest = "e24ebc52c385775f0554febfbc756c329ada1128cb0df13a7d65dd3e9036f72d"

# migrating browser package name is desired but is difficult without losing user data
chrome_public_manifest_package = "org.chromium.chrome"
#chrome_public_manifest_package = "org.grapheneos.vanadium"
system_webview_package_name = "org.grapheneos.vanadium.webview"
trichrome_library_package = "org.grapheneos.vanadium.trichromelibrary"
