target_os = "android"
# change to x64 for x86_64 targets
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "87.0.4280.128"
android_default_version_code = "428012800"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 1
fieldtrial_testing_like_official_build = true

# enable patented codecs
ffmpeg_branding = "Chrome"
proprietary_codecs = true

is_cfi = true

enable_gvr_services = false
enable_remoting = false

# set to false to build without the unused reporting support
#
# this breaks the build since 83.0.4103.60 - last tested with 84.0.4147.89
enable_reporting = true

trichrome_certdigest = "e24ebc52c385775f0554febfbc756c329ada1128cb0df13a7d65dd3e9036f72d"

# migrating browser package name is desired but is difficult without losing user data
#
# the original-package feature is supposed to provide migration, but it isn't
# complete enough to handle this for Chromium
chrome_public_manifest_package = "org.chromium.chrome"
#chrome_public_manifest_package = "app.vanadium.browser"
system_webview_package_name = "app.vanadium.webview"
trichrome_library_package = "app.vanadium.trichromelibrary"
